2008-07-03  Andreas Fink <andreas at fink.org>
    * gw/smsc_at.c
      size_t is unsigned so if -1 is returned, we never catch it.

2008-07-03  Stipe Tolj  <stolj at kannel.org>
    * gwlib/gwthread[-pthread].[ch]: add function gwthread_sleep_micro() which
      allows sleep of microseconds. Thanks to Werner Coetzee 
      <werner.coetzee at clickatell.com> for providing this contribution.
      [Msg-Id: <86E9DA9FF04EBD468B3574F22A0B0DB648811780C4@comms01-cpt.internal.clickatell.com>]

2008-07-02  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: add support for AIX 64bit builds via setting the ar
      archiever call in $AR env variable.
      Thanks to James Bostock <james.bostock at comverse.com> for his AIX 
      contributions.
      [Msg-Id: <84E219D8B81E5F4688C4A8992426CD83012A44E9@fr-par-mail01.comverse.com>] 

2008-07-02  Stipe Tolj  <stolj at kannel.org>
    * gwlib/mime.c: fix and relax function mime_entity_to_octstr() for end of
      line chars. Thanks to Paul Bagyenda for providing the patch.
      [Msg-Id: <841FABF4-5733-4610-B097-19120DF0CD4A@dsmagic.com>]
    * test/mime-multipart.txt: demo MIME multipart input file for test/
      test_mime_multipart.c.  

2008-06-30  Stipe Tolj  <stolj at kannel.org>
    * test/test_urltrans.c: fix compiler warning. NLC.

2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * Makefile.in: add 'datarootdir' reference which is required for
      autoconf 2.60 (and higher) output files.
      
2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: fix shell unary expression error. NLC.
    
2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: fix [] bracked output, and change --with-sqlite to
      --with-sqlite2 to make the difference to more recent sqlite3 version
      clear.
      
2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_at.c: fix compiler warnings. NLC.
    
2008-06-24 Alexander Malysh <amalysh at kannel.org>